force-app/main/default/objects/Quotation_Iteration__c/Quotation_Iteration__c.object-meta.xml
<CustomObject>
    <label>Quotation Iteration</label>
    <nameField>
        <label>Quotation Iteration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotation Iterations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>