force-app/main/default/objects/Quotation_Iteration__c/fields/Agreed_Price__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Price__c</fullName>
    <label>Agreed Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>