force-app/main/default/objects/Quotation_Iteration__c/fields/All_or_Nothing__c.field-meta.xml
<CustomField>
    <fullName>All_or_Nothing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All or Nothing</label>
    <type>Checkbox</type>
</CustomField>