force-app/main/default/objects/Quotation_Iteration__c/fields/Ask_Price__c.field-meta.xml
<CustomField>
    <fullName>Ask_Price__c</fullName>
    <label>Ask Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>