force-app/main/default/objects/Quotation_Iteration__c/fields/Bid_Volume__c.field-meta.xml
<CustomField>
    <fullName>Bid_Volume__c</fullName>
    <label>Bid Volume</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>