force-app/main/default/objects/Quotation_Iteration__c/fields/Consumer__c.field-meta.xml
<CustomField>
    <fullName>Consumer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consumer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotation Iterations</relationshipLabel>
    <relationshipName>Quotation_Iterations</relationshipName>
    <type>Lookup</type>
</CustomField>