force-app/main/default/objects/Quotation_Iteration__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination</label>
    <referenceTo>Destination__c</referenceTo>
    <relationshipLabel>Quotation Iterations</relationshipLabel>
    <relationshipName>Quotation_Iterations</relationshipName>
    <type>Lookup</type>
</CustomField>