force-app/main/default/objects/Quotation_Iteration__c/fields/Factory__c.field-meta.xml
<CustomField>
    <fullName>Factory__c</fullName>
    <label>Factory</label>
    <referenceTo>Factory__c</referenceTo>
    <relationshipLabel>Quotation Iterations</relationshipLabel>
    <relationshipName>Quotation_Iterations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>