force-app/main/default/objects/Quotation_Iteration__c/fields/Favorite_Consumer__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Consumer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Favorite Consumer</label>
    <type>Checkbox</type>
</CustomField>