force-app/main/default/objects/Quotation_Iteration__c/fields/Favorite_Producer__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Producer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Favorite Producer</label>
    <type>Checkbox</type>
</CustomField>