force-app/main/default/objects/Quotation_Iteration__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grade</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Quotation Iterations</relationshipLabel>
    <relationshipName>Quotation_Iterations</relationshipName>
    <type>Lookup</type>
</CustomField>