force-app/main/default/objects/Quotation_Iteration__c/fields/Packing__c.field-meta.xml
<CustomField>
    <fullName>Packing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Packing</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Quotation Iterations (Packing)</relationshipLabel>
    <relationshipName>Quotation_Iterations1</relationshipName>
    <type>Lookup</type>
</CustomField>