force-app/main/default/objects/Quotation_Iteration__c/fields/Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Term</label>
    <referenceTo>Payment_Term__c</referenceTo>
    <relationshipLabel>Quotation Iterations</relationshipLabel>
    <relationshipName>Quotation_Iterations</relationshipName>
    <type>Lookup</type>
</CustomField>