force-app/main/default/objects/Quotation_Iteration__c/fields/Port__c.field-meta.xml
<CustomField>
    <fullName>Port__c</fullName>
    <formula>Factory__r.Port__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Port</label>
    <type>Text</type>
</CustomField>