force-app/main/default/objects/Quotation_Iteration__c/fields/Primary_Quotation__c.field-meta.xml
<CustomField>
    <fullName>Primary_Quotation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Quotation</label>
    <referenceTo>Quotation__c</referenceTo>
    <relationshipLabel>Quotation Iterations</relationshipLabel>
    <relationshipName>Quotation_Iterations</relationshipName>
    <type>Lookup</type>
</CustomField>