force-app/main/default/objects/Quotation_Iteration__c/fields/Producer__c.field-meta.xml
<CustomField>
    <fullName>Producer__c</fullName>
    <label>Producer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotation Iterations (Producer)</relationshipLabel>
    <relationshipName>Quotation_Iterations1</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>