force-app/main/default/objects/Quotation_Iteration__c/fields/Quotation_Name__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Name__c</fullName>
    <label>Quotation Name</label>
    <type>AutoNumber</type>
</CustomField>