force-app/main/default/objects/Quotation_Iteration__c/fields/Quotation_Status__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Status__c</fullName>
    <label>Quotation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Pulled</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Counter</fullName>
            </value>
            <value>
                <fullName>Left</fullName>
            </value>
            <value>
                <fullName>Done Deal</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>