force-app/main/default/objects/Quotation_Iteration__c/fields/Revision__c.field-meta.xml
<CustomField>
    <fullName>Revision__c</fullName>
    <label>Revision</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>