force-app/main/default/objects/Quotation_Iteration__c/fields/Seller__c.field-meta.xml
<CustomField>
    <fullName>Seller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seller</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotation_Iterations1</relationshipName>
    <type>Lookup</type>
</CustomField>