force-app/main/default/objects/Quotation_Iteration__c/fields/Shipment_Information__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipment Information</label>
    <referenceTo>Shipment__c</referenceTo>
    <relationshipLabel>Quotation Iterations</relationshipLabel>
    <relationshipName>Quotation_Iterations</relationshipName>
    <type>Lookup</type>
</CustomField>